all the content updated for the init website.

--- a/call.html
+++ b/call.html
@@ -17,8 +17,8 @@
   <div class="jumbotron jumbotron-fluid pr-2 pl-2 pb-0 top-panel">
     <div class="row container-fluid justify-content-center align-items-center">
       <div class="col-sm-6">
-        <h1 class="mb-0" style="color:#5e5d5d;"> <span class="theme-color">TREX</span> 2021: <br> Workshop on <span
-            class="theme-color">TR</span>ust and <span2 class="theme-color">EX</span2>pertise <br> in Visual Analytics
+        <h1 class="mb-0" style="color:#1d3060;"> <span class="theme-color">TREX</span> 2022: <br> Workshop on <span
+            class="theme-color">TR</span>ust and <span2 class="theme-color">EX</span2>pertise in Visualization
         </h1>
         <!-- <p class="mb-0" style="color:#5e5d5d;">IEEE VIS 2020, Salt Lake City, Utah <br> <span class="theme-color">25-30 October</span></p> -->
       </div>
@@ -37,16 +37,19 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav nav-fill w-100">
         <li class="nav-item">
-          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./index.html');">About TREX</a>
+          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./index.html');">About
+            TREX</a>
+        </li>
+        <!-- <li class="nav-item">
+          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./speakers.html');">Keynote Speaker <span
+              style="font-size: 0.6rem;">(NEW)</span></a>
         </li>
         <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./speakers.html');">Keynote Speaker <span style="font-size: 0.6rem;">(NEW)</span></a>
-      </li>
+          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./papers.html');">Workshop Schedule <span
+              style="font-size: 0.6rem;">(NEW)</span></a>
+        </li> -->
         <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./papers.html');">Workshop Schedule <span style="font-size: 0.6rem;">(NEW)</span></a>
-      </li>
-        <li class="nav-item">
-          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./call.html');"><span class="current-nav"> Call
+          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./call.html');"><span class="current-nav">Call
               for Papers</span></a>
         </li>
         <li class="nav-item">
@@ -61,9 +64,9 @@
 
   <div class="container-fluid">
     <div class="row mb-5">
-      <div class="col-sm-4 col-lg-3 col-md-4 pt-4 side-panel sticky-offset" style="background-color: #ffe28a;">
+      <div class="col-sm-4 col-lg-3 col-md-4 pt-4 side-panel sticky-offset" style="background-color: #becdf4;">
         <!-- <h2>About Me</h2> -->
-        <h5 class="mb-0">IEEE VIS 2021, New Orleans, USA <br> <span class="theme-color">24-29 October 2021</span></h5>
+        <h5 class="mb-0">IEEE VIS 2022, Hybrid, USA <br> <span class="theme-color">16-21 October 2022</span></h5>
         <br>
         <h4>Important Dates</h4>
         <div class="row mb-3">
@@ -71,7 +74,7 @@
             <h6>Submission Deadline</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color"><strike style="color: #770e81;">Jul 30, 2021</strike> <b>Aug 6, 2021, 6 pm PST</b>
+            <h6 class="theme-color">Jul 15, 2022, 6 pm PST
             </h6>
           </div>
         </div>
@@ -80,7 +83,7 @@
             <h6>Author Notification</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color"><strike style="color: #770e81;">Sep 3, 2021</strike> <b>Sep 10, 2021, 6 pm PST</b>
+            <h6 class="theme-color">Aug 12, 2022, 6 pm PST
             </h6>
           </div>
         </div>
@@ -89,16 +92,16 @@
             <h6>Camera-Ready Deadline</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color">  <b>Sep 17, 2021, AoE</b>
+            <h6 class="theme-color"> Aug 22, 2022, 6 pm PST
             </h6>
           </div>
         </div>
         <div class="row mb-3">
           <div class="col-sm-12 col-lg-12 col-md-12">
-            <h6>TREX 2021 Workshop</h6>
+            <h6>TREX 2022 Workshop</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color">October 24, 8-11:30 am Central Time
+            <h6 class="theme-color">Oct 16 or 17, 2022
               <!-- <br>12:00 pm - 3:30 pm (US Mountain Time) -->
             </h6>
           </div>
@@ -109,38 +112,16 @@
         <h4 class="col-sm-3 pl-0"> Call for papers</h4>
         <br>
         <h5 class="theme-color">Workshop Goals</h5>
-        <p> Visual analytics (VA) systems combine computational support and human cognitive and perceptual skills to
-          explore and analyze data.
-          Many of these systems have been incorporating machine learning (ML) models and algorithms to introduce some
-          level of automation to the analytical process.
-          However, within this relationship, there are a number of aspects that can impact the effectiveness of the
-          human-machine teaming, including:
-        <ol>
-          <li> People's domain and system expertise;</li>
-          <li> Human biases, including cognitive and perceptual biases;</li>
-          <li> Trust in ML models and visual representation of data.</li>
-        </ol>
-        <!-- (1) people's domain and system expertise, (2) human biases, including cognitive and perceptual biases, and (3) trust in ML models and visual representation of data. -->
-        Expertise, bias, and trust are intrinsically intertwined.
-        Additionally, visual analytics systems are used in different fields and by people from various backgrounds, with
-        different levels of domain expertise and experience with machine learning and visual analytics tools.
-        This variety of experience and domain expertise among human users has opened the door for new research
-        directions and challenges in the fields of visual analytics and machine learning.
-        Designers who fail to consider the aforementioned diversities might introduce problems to the analysis
-        effectiveness and user experience.
-        Furthermore, experience and domain expertise might affect user trust in visual analytics tools; although, how
-        and why they affect trust is still an open question.
-        Trust will eventually affect how much the users would rely on and use the tool.
-        While users will take advantage of their prior experiences to make better decisions with the assistance of
-        analytic support, they might carry many cognitive biases that can negatively influence their decision-making or
-        analysis process.
-        Recent research shows trust in and reliance on the visual analytics systems/tools as well as user strategies and
-        biases can be directly influenced by domain and system expertise (or lack of expertise).
-        The goal of this workshop is to bring together researchers and practitioners from different disciplines to
-        discuss and discover challenges in ML supported visual analytics tools and set the stage for future research
-        directions and collaborations regarding these issues by proposing design guidelines, empirical findings, and VA
-        techniques.
-
+        <p>
+          Interactive visualization systems combine computational support, human cognitive, and perceptual skills to
+          explore and analyze data. Many of these systems incorporate machine learning (ML) and Artificial Intelligence
+          (AI) algorithms to introduce some level of automation to the analytical process. However, there are aspects
+          that can impact the effectiveness of the human-machine collaboration, including, but not limited to: 1)
+          People's domain and system expertise; 2) Human biases, including cognitive and perceptual biases; 3) Trust in
+          ML models and visual representation of data. The goal of this workshop is to highlight and foster a
+          conversation around the intersection of visualization and human-centered AI research and practice by providing
+          an interdisciplinary platform from relevant fields to communicate challenges and novel findings around such
+          topics.
         </p>
         <br>
         <h5 class="theme-color">Topics of Interest</h5>
@@ -240,12 +221,13 @@
     <div class="row text-center mb-1">
       <div class="col-sm-12">
         <i class="text-center" style="color: #5e5d5d; font-size: 0.7rem;"> Copyright <i class="far fa-copyright"></i>
-          <script>document.write(new Date().getUTCFullYear());</script> TREX Second Workshop on Trust and Expertise In
-          Visual Analytics.
+          <script>document.write(new Date().getUTCFullYear());</script> TREX 2022: Third Workshop on Trust and Expertise
+          In
+          Visualization. All Rights Reserved.
         </i>
-        <i style="color: #5e5d5d; font-size: 0.7rem;"> The image on the header was made from vectors published by <a
+        <!-- <i style="color: #5e5d5d; font-size: 0.7rem;"> The image on the header was made from vectors published by <a
             href="https://www.freepik.com/free-photos-vectors/background">freepik.com</a>. Copyright belongs to freepik
-          and art creators. </i>
+          and art creators. </i> -->
       </div>
     </div>
 
