--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@
   <div class="jumbotron jumbotron-fluid pr-2 pl-2 pb-0 top-panel">
     <div class="row container-fluid justify-content-center align-items-center">
       <div class="col-sm-6">
-        <h1 class="mb-0" style="color:#5e5d5d;"> <span class="theme-color">TREX</span> 2021: <br> Workshop on <span
-            class="theme-color">TR</span>ust and <span2 class="theme-color">EX</span2>pertise <br> in Visual Analytics
+        <h1 class="mb-0" style="color:#1d3060;"> <span class="theme-color">TREX</span> 2022: <br> Workshop on <span
+            class="theme-color">TR</span>ust and <span2 class="theme-color">EX</span2>pertise in Visualization
         </h1>
         <!-- <p class="mb-0" style="color:#5e5d5d;">IEEE VIS 2020, Salt Lake City, Utah <br> <span class="theme-color">25-30 October</span></p> -->
       </div>
@@ -37,14 +37,17 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav nav-fill w-100">
         <li class="nav-item">
-          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./index.html');">About TREX</a>
+          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./index.html');"><span class="current-nav">About
+              TREX</span></a>
+        </li>
+        <!-- <li class="nav-item">
+          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./speakers.html');">Keynote Speaker <span
+              style="font-size: 0.6rem;">(NEW)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./speakers.html');">Keynote Speaker <span style="font-size: 0.6rem;">(NEW)</span></a>
-        </li>
-        <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./papers.html');">Workshop Schedule <span style="font-size: 0.6rem;">(NEW)</span></a>
-      </li>
+          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./papers.html');">Workshop Schedule <span
+              style="font-size: 0.6rem;">(NEW)</span></a>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./call.html');">Call for Papers</a>
         </li>
@@ -52,8 +55,7 @@
           <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./organizers.html');">Organizers</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./contact.html');"> <span
-              class="current-nav">Contact</span></a>
+          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./contact.html');">Contact</a>
         </li>
       </ul>
     </div>
@@ -61,9 +63,9 @@
 
   <div class="container-fluid">
     <div class="row mb-5">
-      <div class="col-sm-4 col-lg-3 col-md-4 pt-4 side-panel sticky-offset" style="background-color: #ffe28a;">
+      <div class="col-sm-4 col-lg-3 col-md-4 pt-4 side-panel sticky-offset" style="background-color: #becdf4;">
         <!-- <h2>About Me</h2> -->
-        <h5 class="mb-0">IEEE VIS 2021, New Orleans, USA <br> <span class="theme-color">24-29 October 2021</span></h5>
+        <h5 class="mb-0">IEEE VIS 2022, Hybrid, USA <br> <span class="theme-color">16-21 October 2022</span></h5>
         <br>
         <h4>Important Dates</h4>
         <div class="row mb-3">
@@ -71,7 +73,7 @@
             <h6>Submission Deadline</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color"><strike style="color: #770e81;">Jul 30, 2021</strike> <b>Aug 6, 2021, 6 pm PST</b>
+            <h6 class="theme-color">Jul 15, 2022, 6 pm PST
             </h6>
           </div>
         </div>
@@ -80,7 +82,7 @@
             <h6>Author Notification</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color"><strike style="color: #770e81;">Sep 3, 2021</strike> <b>Sep 10, 2021, 6 pm PST</b>
+            <h6 class="theme-color">Aug 12, 2022, 6 pm PST
             </h6>
           </div>
         </div>
@@ -89,16 +91,16 @@
             <h6>Camera-Ready Deadline</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color">  <b>Sep 17, 2021, AoE</b>
+            <h6 class="theme-color"> Aug 22, 2022, 6 pm PST
             </h6>
           </div>
         </div>
         <div class="row mb-3">
           <div class="col-sm-12 col-lg-12 col-md-12">
-            <h6>TREX 2021 Workshop</h6>
+            <h6>TREX 2022 Workshop</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color">October 24, 8-11:30 am Central Time
+            <h6 class="theme-color">Oct 16 or 17, 2022
               <!-- <br>12:00 pm - 3:30 pm (US Mountain Time) -->
             </h6>
           </div>
@@ -109,6 +111,7 @@
         <h4> Contact</h4>
         <br>
         <p> If you have any questions regarding the workshop, you can contact us through <a
+            href="mailto:trex@ieeevis.org"><span>TREX@ieeevis.org</span></a> or <a
             href="mailto:trexinvis@gmail.com"><span>TrexInVis@gmail.com</span></a>.
           <br>
           <br>
@@ -124,12 +127,13 @@
     <div class="row text-center mb-1">
       <div class="col-sm-12">
         <i class="text-center" style="color: #5e5d5d; font-size: 0.7rem;"> Copyright <i class="far fa-copyright"></i>
-          <script>document.write(new Date().getUTCFullYear());</script> TREX Second Workshop on Trust and Expertise In
-          Visual Analytics.
+          <script>document.write(new Date().getUTCFullYear());</script> TREX 2022: Third Workshop on Trust and Expertise
+          In
+          Visualization. All Rights Reserved.
         </i>
-        <i style="color: #5e5d5d; font-size: 0.7rem;"> The image on the header was made from vectors published by <a
+        <!-- <i style="color: #5e5d5d; font-size: 0.7rem;"> The image on the header was made from vectors published by <a
             href="https://www.freepik.com/free-photos-vectors/background">freepik.com</a>. Copyright belongs to freepik
-          and art creators. </i>
+          and art creators. </i> -->
       </div>
     </div>
 
