--- a/organizers.html
+++ b/organizers.html
@@ -17,8 +17,8 @@
   <div class="jumbotron jumbotron-fluid pr-2 pl-2 pb-0 top-panel">
     <div class="row container-fluid justify-content-center align-items-center">
       <div class="col-sm-6">
-        <h1 class="mb-0" style="color:#5e5d5d;"> <span class="theme-color">TREX</span> 2021: <br> Workshop on <span
-            class="theme-color">TR</span>ust and <span2 class="theme-color">EX</span2>pertise <br> in Visual Analytics
+        <h1 class="mb-0" style="color:#1d3060;"> <span class="theme-color">TREX</span> 2022: <br> Workshop on <span
+            class="theme-color">TR</span>ust and <span2 class="theme-color">EX</span2>pertise in Visualization
         </h1>
         <!-- <p class="mb-0" style="color:#5e5d5d;">IEEE VIS 2020, Salt Lake City, Utah <br> <span class="theme-color">25-30 October</span></p> -->
       </div>
@@ -37,14 +37,17 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav nav-fill w-100">
         <li class="nav-item">
-          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./index.html');">About TREX</a>
+          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./index.html');">About
+            TREX</a>
         </li>
-          <li class="nav-item">
-          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./speakers.html');"> Keynote Speaker <span style="font-size: 0.6rem;">(NEW)</span></a>
+        <!-- <li class="nav-item">
+          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./speakers.html');">Keynote Speaker <span
+              style="font-size: 0.6rem;">(NEW)</span></a>
         </li>
         <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./papers.html');">Workshop Schedule <span style="font-size: 0.6rem;">(NEW)</span></a>
-      </li>
+          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./papers.html');">Workshop Schedule <span
+              style="font-size: 0.6rem;">(NEW)</span></a>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./call.html');">Call for Papers</a>
         </li>
@@ -61,9 +64,9 @@
 
   <div class="container-fluid">
     <div class="row mb-5">
-      <div class="col-sm-4 col-lg-3 col-md-4 pt-4 side-panel sticky-offset" style="background-color: #ffe28a;">
+      <div class="col-sm-4 col-lg-3 col-md-4 pt-4 side-panel sticky-offset" style="background-color: #becdf4;">
         <!-- <h2>About Me</h2> -->
-        <h5 class="mb-0">IEEE VIS 2021, New Orleans, USA <br> <span class="theme-color">24-29 October 2021</span></h5>
+        <h5 class="mb-0">IEEE VIS 2022, Hybrid, USA <br> <span class="theme-color">16-21 October 2022</span></h5>
         <br>
         <h4>Important Dates</h4>
         <div class="row mb-3">
@@ -71,7 +74,7 @@
             <h6>Submission Deadline</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color"><strike style="color: #770e81;">Jul 30, 2021</strike> <b>Aug 6, 2021, 6 pm PST</b>
+            <h6 class="theme-color">Jul 15, 2022, 6 pm PST
             </h6>
           </div>
         </div>
@@ -80,7 +83,7 @@
             <h6>Author Notification</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color"><strike style="color: #770e81;">Sep 3, 2021</strike> <b>Sep 10, 2021, 6 pm PST</b>
+            <h6 class="theme-color">Aug 12, 2022, 6 pm PST
             </h6>
           </div>
         </div>
@@ -89,16 +92,16 @@
             <h6>Camera-Ready Deadline</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color">  <b>Sep 17, 2021, AoE</b>
+            <h6 class="theme-color"> Aug 22, 2022, 6 pm PST
             </h6>
           </div>
         </div>
         <div class="row mb-3">
           <div class="col-sm-12 col-lg-12 col-md-12">
-            <h6>TREX 2021 Workshop</h6>
+            <h6>TREX 2022 Workshop</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color">October 24, 8-11:30 am Central Time
+            <h6 class="theme-color">Oct 16 or 17, 2022
               <!-- <br>12:00 pm - 3:30 pm (US Mountain Time) -->
             </h6>
           </div>
@@ -106,21 +109,15 @@
       </div>
 
       <div class="col-sm-8 col-lg-9 col-md-8 pt-4">
-        <h4 class="col-sm-3 pl-0">Workshop Organizers</h4>
+        <h4 class="col-sm-6 pl-0">Workshop Organizers</h4>
         <br>
-        <div class="card-deck">
+        <div class="card-columns">
           <div class="card text-center border-0">
             <a href="https://mahsan.page" target="_blank"><img class="card-img-top image-org rounded-circle shadow-lg"
                 src="files/Mahsan.jpeg" alt="Card image"></a>
             <div class="card-body text-center"><a href="https://mahsan.page" target="_blank"><span
                   style="color:black;">Mahsan Nourani</span></a><br><span class="theme-color">University of
                 Florida</span></div>
-          </div>
-          <div class="card text-center border-0">
-            <a href="https://emilywall.github.io/" target="_blank"><img
-                class="card-img-top image-org rounded-circle shadow-lg" src="files/Emily.jpg" alt="Card image"></a>
-            <div class="card-body text-center"><a href="https://emilywall.github.io/" target="_blank"><span
-                  style="color:black;">Emily Wall</span></a> <br><span class="theme-color">Emory University</span></div>
           </div>
           <div class="card text-center border-0">
             <a href="https://www.cise.ufl.edu/~eragan/" target="_blank"><img
@@ -137,14 +134,39 @@
                   University</span></div>
           </div>
         </div>
-        <h4 class="col-sm-3 pl-0">Program Committee</h4>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item pm-content"><a href="https://jgoodall.me/" class="pm-text">John Goodall </a> - <span style="font-size: small; font-width: bold"><i>Oak Ridge National Laboratory</i></span></li>
-          <li class="list-group-item pm-content"><a href="https://aedeegee.github.io/" class="pm-text">Aritra Dasgupta </a> - <span style="font-size: small; font-width: bold"><i>New Jersey Institute of Technology</i></span></li>
-          <li class="list-group-item pm-content"><a href="https://csteed.com/" class="pm-text">Chad Steed </a> - <span style="font-size: small; font-width: bold"><i>Regions Bank</i></span></li>
-          <li class="list-group-item pm-content"><a href="https://cyxiong.com/" class="pm-text">Cindy Xiong </a> - <span style="font-size: small; font-width: bold"><i>University of Amherst</i></span></li>
-          <li class="list-group-item pm-content"><a href="http://web.cs.wpi.edu/~ltharrison/" class="pm-text">Lane Harrison </a> - <span style="font-size: small; font-width: bold"><i>Rochester Institute of Technology</i></span></li>
-        </ul>
+        <div class="card-columns">
+          <div class="card text-center border-0">
+            <a href="https://cyxiong.com/" target="_blank"><img class="card-img-top image-org rounded-circle shadow-lg"
+                src="files/Cindy.jpg" alt="Card image"></a>
+            <div class="card-body text-center"><a href="https://cyxiong.com/" target="_blank"><span
+                  style="color:black;">Cindy Xiong</span></a> <br><span class="theme-color">University of Massachusetts
+                Amherst</span></div>
+          </div>
+          <div class="card text-center border-0">
+            <a href="https://www.linkedin.com/in/alwayslearning/" target="_blank"><img
+                class="card-img-top image-org rounded-circle shadow-lg" src="files/Britt.png" alt="Card image"></a>
+            <div class="card-body text-center"><a href="https://www.linkedin.com/in/alwayslearning/"
+                target="_blank"><span style="color:black;">Brittany Davis</span></a> <br><span
+                class="theme-color">Pacific Northwest National Lab</span></div>
+          </div>
+        </div>
+        <h4 class="col-sm-6 pl-0">Program Committee</h4>
+        TBD
+        <!-- <ul class="list-group list-group-flush">
+          <li class="list-group-item pm-content"><a href="https://jgoodall.me/" class="pm-text">John Goodall </a> -
+            <span style="font-size: small; font-width: bold"><i>Oak Ridge National Laboratory</i></span>
+          </li>
+          <li class="list-group-item pm-content"><a href="https://aedeegee.github.io/" class="pm-text">Aritra Dasgupta
+            </a> - <span style="font-size: small; font-width: bold"><i>New Jersey Institute of Technology</i></span>
+          </li>
+          <li class="list-group-item pm-content"><a href="https://csteed.com/" class="pm-text">Chad Steed </a> - <span
+              style="font-size: small; font-width: bold"><i>Regions Bank</i></span></li>
+          <li class="list-group-item pm-content"><a href="https://cyxiong.com/" class="pm-text">Cindy Xiong </a> - <span
+              style="font-size: small; font-width: bold"><i>University of Amherst</i></span></li>
+          <li class="list-group-item pm-content"><a href="http://web.cs.wpi.edu/~ltharrison/" class="pm-text">Lane
+              Harrison </a> - <span style="font-size: small; font-width: bold"><i>Rochester Institute of
+                Technology</i></span></li>
+        </ul> -->
       </div>
     </div>
 
@@ -152,12 +174,13 @@
     <div class="row text-center mb-1">
       <div class="col-sm-12">
         <i class="text-center" style="color: #5e5d5d; font-size: 0.7rem;"> Copyright <i class="far fa-copyright"></i>
-          <script>document.write(new Date().getUTCFullYear());</script> TREX Second Workshop on Trust and Expertise In
-          Visual Analytics.
+          <script>document.write(new Date().getUTCFullYear());</script> TREX 2022: Third Workshop on Trust and Expertise
+          In
+          Visualization. All Rights Reserved.
         </i>
-        <i style="color: #5e5d5d; font-size: 0.7rem;"> The image on the header was made from vectors published by <a
+        <!-- <i style="color: #5e5d5d; font-size: 0.7rem;"> The image on the header was made from vectors published by <a
             href="https://www.freepik.com/free-photos-vectors/background">freepik.com</a>. Copyright belongs to freepik
-          and art creators. </i>
+          and art creators. </i> -->
       </div>
     </div>
 
