--- a/papers.html
+++ b/papers.html
@@ -40,8 +40,9 @@
           <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./index.html');">About TREX</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./speakers.html');">Keynote Speaker <span style="font-size: 0.6rem;">(NEW)</span></a>
-      </li>
+          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./speakers.html');">Keynote Speaker <span
+              style="font-size: 0.6rem;">(NEW)</span></a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./papers.html');"><span class="current-nav">
               Workshop Schedule</span> <span style="font-size: 0.6rem;">(NEW)</span></a>
@@ -89,7 +90,7 @@
             <h6>Camera-Ready Deadline</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color">  <b>Sep 17, 2021, AoE</b>
+            <h6 class="theme-color"> <b>Sep 17, 2021, AoE</b>
             </h6>
           </div>
         </div>
@@ -108,7 +109,9 @@
       <div class="col-sm-8 col-lg-9 col-md-8 pt-4">
         <h4> Workshop Schedule <span class="theme-color" style="font-size: 1.1rem;">(NEW)</span></h4>
         <div class="col-md-12 p-0 mb-3">
-          Following a successful <a href="https://trexvis.github.io/Workshop2020/index.html" target="_blank">2020 workshop</a>, we are excited to be a part of IEEE VIS 2021 for the second time. Although the conference will be virtual, we are planning to
+          Following a successful <a href="https://trexvis.github.io/Workshop2020/index.html" target="_blank">2020
+            workshop</a>, we are excited to be a part of IEEE VIS 2021 for the second time. Although the conference will
+          be virtual, we are planning to
           engage the audience through the Q&A and discussion panels. To access the workshop, you can register through <a
             href="http://ieeevis.org/year/2021/info/registration/conference-registration">IEEE VIS
             Website</a>.
@@ -126,50 +129,55 @@
         <div class="row col-md-12 m-0 p-0">
           <div class="col-4 col-md-3 schedule-item-time p-1">8:15 am - 8:25 am (10 min)</div>
           <div class="col-8 col-md-9 schedule-item-content p-1 pl-2"><a href="papers/Boukhelifa.pdf" target=”_blank”
-              style="color: black;">A Case Study of Using Analytic Provenance to Reconstruct User Trust in a Guided Visual Analytics System</a> <br>
-              Nadia Boukhelifa, Evelyne Lutton, Anastasia Bezerianos - <a href="papers/Boukhelifa.pdf"
-              target=”_blank” class="theme-color"><i class="fas fa-file-pdf theme-color"> Paper</i></a> 
-              <!-- - <a href="Video" target=”_blank” class="theme-color"><i class="fab fa-youtube"> <b>Lightning Preview</b></i></a>-->
-            </div> 
+              style="color: black;">A Case Study of Using Analytic Provenance to Reconstruct User Trust in a Guided
+              Visual Analytics System</a> <br>
+            Nadia Boukhelifa, Evelyne Lutton, Anastasia Bezerianos - <a href="papers/Boukhelifa.pdf" target=”_blank”
+              class="theme-color"><i class="fas fa-file-pdf theme-color"> Paper</i></a>
+            <!-- - <a href="Video" target=”_blank” class="theme-color"><i class="fab fa-youtube"> <b>Lightning Preview</b></i></a>-->
+          </div>
         </div>
         <div class="row col-md-12 m-0 p-0">
           <div class="col-4 col-md-3 schedule-item-time p-1">8:25 am - 8:35 am (10 min)</div>
           <div class="col-8 col-md-9 schedule-item-content p-1 pl-2"><a href="papers/Lohfink.pdf" target=”_blank”
               style="color: black;">The Enhanced Security in Process System - Evaluating Knowledge Assistance</a> <br>
-              Anna-Pia Lohfink, Vera Marie Memmesheimer, Frederike Gartzky, Christoph Garth - <a href="papers/Lohfink.pdf"
-              target=”_blank” class="theme-color"><i class="fas fa-file-pdf theme-color"> Paper</i></a> 
-              <!-- - <a href="Video" target=”_blank” class="theme-color"><i class="fab fa-youtube"> <b>Lightning Preview</b></i></a> -->
-            </div> 
+            Anna-Pia Lohfink, Vera Marie Memmesheimer, Frederike Gartzky, Christoph Garth - <a href="papers/Lohfink.pdf"
+              target=”_blank” class="theme-color"><i class="fas fa-file-pdf theme-color"> Paper</i></a>
+            <!-- - <a href="Video" target=”_blank” class="theme-color"><i class="fab fa-youtube"> <b>Lightning Preview</b></i></a> -->
+          </div>
         </div>
         <div class="row col-md-12 m-0 p-0">
           <div class="col-4 col-md-3 schedule-item-time p-1">8:35 am - 8:45 am (10 min)</div>
           <div class="col-8 col-md-9 schedule-item-content p-1 pl-2"><a href="papers/Han.pdf" target=”_blank”
               style="color: black;">Making and Trusting Decisions in Visual Analytics</a> <br> Wenkai
-              Han - <a href="papers/Han.pdf" target=”_blank” class="theme-color"><i
-                class="fas fa-file-pdf theme-color"> Paper</i></a>
-                <!-- - <a href="Video" target=”_blank” class="theme-color"><i class="fab fa-youtube"> <b>Lightning Preview</b></i></a> -->
-              </div>
+            Han - <a href="papers/Han.pdf" target=”_blank” class="theme-color"><i class="fas fa-file-pdf theme-color">
+                Paper</i></a>
+            <!-- - <a href="Video" target=”_blank” class="theme-color"><i class="fab fa-youtube"> <b>Lightning Preview</b></i></a> -->
+          </div>
         </div>
         <div class="row col-md-12 m-0 p-0">
           <div class="col-4 col-md-3 schedule-item-time p-1">8:45 am - 8:55 am (10 min)</div>
           <div class="col-8 col-md-9 schedule-item-content p-1 pl-2"><a href="papers/Wenskovitch.pdf" target=”_blank”
-              style="color: black;">Beyond Visual Analytics: Human-Machine Teaming for AI-Driven Data Sensemaking</a> <br>
-              John Wenskovitch, Corey Fallon, Kate Miller, Aritra Dasgupta - <a href="papers/Wenskovitch.pdf"
+              style="color: black;">Beyond Visual Analytics: Human-Machine Teaming for AI-Driven Data Sensemaking</a>
+            <br>
+            John Wenskovitch, Corey Fallon, Kate Miller, Aritra Dasgupta - <a href="papers/Wenskovitch.pdf"
               target=”_blank” class="theme-color"><i class="fas fa-file-pdf theme-color"> Paper</i></a>
-              <!-- - <a href="Video" target=”_blank” class="theme-color"><i class="fab fa-youtube"> <b>Lightning Preview</b></i></a>  -->
-            </div>
+            <!-- - <a href="Video" target=”_blank” class="theme-color"><i class="fab fa-youtube"> <b>Lightning Preview</b></i></a>  -->
+          </div>
         </div>
         <div class="row col-md-12 m-0 p-0">
           <div class="col-4 col-md-3 schedule-item-time p-1">8:55 am - 9:05 am (10 min)</div>
           <div class="col-8 col-md-9 schedule-item-content p-1 pl-2"><a href="papers/Lu.pdf" target=”_blank”
-              style="color: black;">Evaluating Forecasting, Knowledge, and Visual Analytics</a> - <a href="papers/Lu.pdf"
-              target=”_blank” class="theme-color"><i class="fas fa-file-pdf theme-color"> Paper</i></a> <br>
-              <!-- - <a href="Video" target=”_blank” class="theme-color"><i class="fab fa-youtube"> <b>Lightning Preview</b></i></a> <br> -->
-              Yafeng Lu, Michael Steptoe, Verica Buchanan, Nancy Cooke, Ross Maciejewski</div>
+              style="color: black;">Evaluating Forecasting, Knowledge, and Visual Analytics</a> - <a
+              href="papers/Lu.pdf" target=”_blank” class="theme-color"><i class="fas fa-file-pdf theme-color">
+                Paper</i></a> <br>
+            <!-- - <a href="Video" target=”_blank” class="theme-color"><i class="fab fa-youtube"> <b>Lightning Preview</b></i></a> <br> -->
+            Yafeng Lu, Michael Steptoe, Verica Buchanan, Nancy Cooke, Ross Maciejewski</div>
         </div>
         <div class="row col-md-12 m-0 p-0">
           <div class="col-4 col-md-3 schedule-item-time p-1">9:05 am - 9:30 am (25 min)</div>
-          <div class="col-8 col-md-9 schedule-item-content p-1 pl-2"><b>Round-table Discussions</b> with Q. Vera Liao, Nadia Boukhelifa, Chad Steed, and Corey Fallon - a moderated discussion with researchers from different backgrounds on challenges and opportunities in human-centered AI x Visualization.</div>
+          <div class="col-8 col-md-9 schedule-item-content p-1 pl-2"><b>Round-table Discussions</b> with Q. Vera Liao,
+            Nadia Boukhelifa, Chad Steed, and Corey Fallon - a moderated discussion with researchers from different
+            backgrounds on challenges and opportunities in human-centered AI x Visualization.</div>
         </div>
         <div class="col-md-12 justify-content-center schedule-title p-1 border-top-0 border-bottom-0"
           style="background-color: #ffe28a">
@@ -179,12 +187,12 @@
           <b>Session 2 - 10:00 am - 11:30 am (US Central Time)</b>
         </div>
         <div class="row col-md-12 m-0 p-0">
-          <div class="col-4 col-md-3 schedule-item-time p-1">10:00 am - 10:08 am  (8 min)</div>
+          <div class="col-4 col-md-3 schedule-item-time p-1">10:00 am - 10:08 am (8 min)</div>
           <div class="col-8 col-md-9 schedule-item-content p-1 pl-2">Welcome back and Keynote Introduction</div>
         </div>
         <div class="row col-md-12 m-0 p-0">
-          <div class="col-4 col-md-3 schedule-item-time p-1">10:08 am - 10:40 am  (32 min)</div>
-          <div class="col-8 col-md-9 schedule-item-content p-1 pl-2"><b>Keynote Speaker:</b> Dr. Q. Vera Liao 
+          <div class="col-4 col-md-3 schedule-item-time p-1">10:08 am - 10:40 am (32 min)</div>
+          <div class="col-8 col-md-9 schedule-item-content p-1 pl-2"><b>Keynote Speaker:</b> Dr. Q. Vera Liao
             (Human-Centered Explainable AI (HCXAI): From Algorithms to User Experiences)
             <a href="speakers.html"><u>More info here...</u></a>
           </div>
@@ -193,42 +201,46 @@
           <div class="col-4 col-md-3 schedule-item-time p-1">10:40 am - 10:50 am (10 min)</div>
           <div class="col-8 col-md-9 schedule-item-content p-1 pl-2"><a href="papers/Schlegel.pdf" target=”_blank”
               style="color: black;">Time Series Model Attribution Visualizations as Explanations</a> <br>
-              Udo Schlegel, Daniel Keim - <a href="papers/Schlegel.pdf" target=”_blank” class="theme-color"><i class="fas fa-file-pdf theme-color">
-                Paper</i></a> 
-                <!-- - <a href="Video" target=”_blank” class="theme-color"><i
+            Udo Schlegel, Daniel Keim - <a href="papers/Schlegel.pdf" target=”_blank” class="theme-color"><i
+                class="fas fa-file-pdf theme-color">
+                Paper</i></a>
+            <!-- - <a href="Video" target=”_blank” class="theme-color"><i
                 class="fab fa-youtube theme-color"> <b>Lightning Preview</b></i></a>  -->
-            </div>
+          </div>
         </div>
         <div class="row col-md-12 m-0 p-0">
           <div class="col-4 col-md-3 schedule-item-time p-1">10:50 am - 11:00 am (10 min)</div>
           <div class="col-8 col-md-9 schedule-item-content p-1 pl-2"><a href="papers/Ooge.pdf" target=”_blank”
-              style="color: black;">Trust in Prediction Models: a Mixed-Methods Pilot Study on the Impact of Domain Expertise</a> <br>
-              Jeroen Ooge, Katrien Verbert - <a href="papers/Ooge.pdf" target=”_blank” class="theme-color"><i class="fas fa-file-pdf theme-color">
-                Paper</i></a> 
-                <!-- - <a href="Video" target=”_blank” class="theme-color"><i
+              style="color: black;">Trust in Prediction Models: a Mixed-Methods Pilot Study on the Impact of Domain
+              Expertise</a> <br>
+            Jeroen Ooge, Katrien Verbert - <a href="papers/Ooge.pdf" target=”_blank” class="theme-color"><i
+                class="fas fa-file-pdf theme-color">
+                Paper</i></a>
+            <!-- - <a href="Video" target=”_blank” class="theme-color"><i
                 class="fab fa-youtube theme-color"> <b>Lightning Preview</b></i></a>  -->
-            </div>
+          </div>
         </div>
         <div class="row col-md-12 m-0 p-0">
           <div class="col-4 col-md-3 schedule-item-time p-1">11:00 am - 11:10 am (10 min)</div>
           <div class="col-8 col-md-9 schedule-item-content p-1 pl-2"><a href="papers/Leffrang.pdf" target=”_blank”
-              style="color: black;">Should I Follow this Model? The Effect of Uncertainty Visualization on the Acceptance of Time Series Forecasts</a> 
-              <br>
-                Dirk Leffrang, Oliver Mueller - 
-              <a href="papers/Leffrang.pdf" target=”_blank” class="theme-color"><i class="fas fa-file-pdf theme-color">
+              style="color: black;">Should I Follow this Model? The Effect of Uncertainty Visualization on the
+              Acceptance of Time Series Forecasts</a>
+            <br>
+            Dirk Leffrang, Oliver Mueller -
+            <a href="papers/Leffrang.pdf" target=”_blank” class="theme-color"><i class="fas fa-file-pdf theme-color">
                 Paper</i></a>
-                <!-- - <a href="Video" target=”_blank” class="theme-color"><i
+            <!-- - <a href="Video" target=”_blank” class="theme-color"><i
                 class="fab fa-youtube theme-color"> <b>Lightning Preview</b></i></a> -->
-            </div>
+          </div>
         </div>
         <div class="row col-md-12 m-0 p-0">
           <div class="col-4 col-md-3 schedule-item-time p-1">11:10 am - 11:20 am (10 min)</div>
           <div class="col-8 col-md-9 schedule-item-content p-1 pl-2"><a href="papers/Gillman.pdf" target=”_blank”
               style="color: black;">How to deal with Uncertainty in Machine Learning for Medical Applications?</a> <br>
-              Christina Gillmann, Dorothee Saur, Gerik Scheuermann - <a href="papers/Gillman.pdf"
-              target=”_blank” class="theme-color"><i class="fas fa-file-pdf theme-color"> Paper</i></a>
-              <!-- - <a href="Video" target=”_blank” class="theme-color"><i class="fab fa-youtube"> <b>Lightning Preview</b></i></a> -->
-            </div>
+            Christina Gillmann, Dorothee Saur, Gerik Scheuermann - <a href="papers/Gillman.pdf" target=”_blank”
+              class="theme-color"><i class="fas fa-file-pdf theme-color"> Paper</i></a>
+            <!-- - <a href="Video" target=”_blank” class="theme-color"><i class="fab fa-youtube"> <b>Lightning Preview</b></i></a> -->
+          </div>
         </div>
         <div class="row col-md-12 m-0 p-0">
           <div class="col-4 col-md-3 schedule-item-time p-1">11:20 am - 11:30 am (10 min)</div>
@@ -241,12 +253,13 @@
     <div class="row text-center mb-1">
       <div class="col-sm-12">
         <i class="text-center" style="color: #5e5d5d; font-size: 0.7rem;"> Copyright <i class="far fa-copyright"></i>
-          <script>document.write(new Date().getUTCFullYear());</script> TREX Second Workshop on Trust and Expertise In
-          Visual Analytics.
+          <script>document.write(new Date().getUTCFullYear());</script> TREX 2022: Third Workshop on Trust and Expertise
+          In
+          Visualization. All Rights Reserved.
         </i>
-        <i style="color: #5e5d5d; font-size: 0.7rem;"> The image on the header was made from vectors published by <a
+        <!-- <i style="color: #5e5d5d; font-size: 0.7rem;"> The image on the header was made from vectors published by <a
             href="https://www.freepik.com/free-photos-vectors/background">freepik.com</a>. Copyright belongs to freepik
-          and art creators. </i>
+          and art creators. </i> -->
       </div>
     </div>
 
