--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <div class="jumbotron jumbotron-fluid pr-2 pl-2 pb-0 top-panel">
     <div class="row container-fluid justify-content-center align-items-center">
       <div class="col-sm-6">
-        <h1 class="mb-0" style="color:#5e5d5d;"> <span class="theme-color">TREX</span> 2021: <br> Workshop on <span
-            class="theme-color">TR</span>ust and <span2 class="theme-color">EX</span2>pertise <br> in Visual Analytics
+        <h1 class="mb-0" style="color:#1d3060;"> <span class="theme-color">TREX</span> 2022: <br> Workshop on <span
+            class="theme-color">TR</span>ust and <span2 class="theme-color">EX</span2>pertise in Visualization
         </h1>
         <!-- <p class="mb-0" style="color:#5e5d5d;">IEEE VIS 2020, Salt Lake City, Utah <br> <span class="theme-color">25-30 October</span></p> -->
       </div>
@@ -40,12 +40,14 @@
           <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./index.html');"><span class="current-nav">About
               TREX</span></a>
         </li>
+        <!-- <li class="nav-item">
+          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./speakers.html');">Keynote Speaker <span
+              style="font-size: 0.6rem;">(NEW)</span></a>
+        </li>
         <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./speakers.html');">Keynote Speaker <span style="font-size: 0.6rem;">(NEW)</span></a>
-      </li>
-        <li class="nav-item">
-        <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./papers.html');">Workshop Schedule <span style="font-size: 0.6rem;">(NEW)</span></a>
-      </li>
+          <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./papers.html');">Workshop Schedule <span
+              style="font-size: 0.6rem;">(NEW)</span></a>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" data-toggle="tab" href="#" onclick="goTo('./call.html');">Call for Papers</a>
         </li>
@@ -61,9 +63,9 @@
 
   <div class="container-fluid">
     <div class="row mb-5">
-      <div class="col-sm-4 col-lg-3 col-md-4 pt-4 side-panel sticky-offset" style="background-color: #ffe28a;">
+      <div class="col-sm-4 col-lg-3 col-md-4 pt-4 side-panel sticky-offset" style="background-color: #becdf4;">
         <!-- <h2>About Me</h2> -->
-        <h5 class="mb-0">IEEE VIS 2021, New Orleans, USA <br> <span class="theme-color">24-29 October 2021</span></h5>
+        <h5 class="mb-0">IEEE VIS 2022, Hybrid, USA <br> <span class="theme-color">16-21 October 2022</span></h5>
         <br>
         <h4>Important Dates</h4>
         <div class="row mb-3">
@@ -71,7 +73,7 @@
             <h6>Submission Deadline</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color"><strike style="color: #770e81;">Jul 30, 2021</strike> <b>Aug 6, 2021, 6 pm PST</b>
+            <h6 class="theme-color">Jul 15, 2022, 6 pm PST
             </h6>
           </div>
         </div>
@@ -80,7 +82,7 @@
             <h6>Author Notification</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color"><strike style="color: #770e81;">Sep 3, 2021</strike> <b>Sep 10, 2021, 6 pm PST</b>
+            <h6 class="theme-color">Aug 12, 2022, 6 pm PST
             </h6>
           </div>
         </div>
@@ -89,16 +91,16 @@
             <h6>Camera-Ready Deadline</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color">  <b>Sep 17, 2021, AoE</b>
+            <h6 class="theme-color"> Aug 22, 2022, 6 pm PST
             </h6>
           </div>
         </div>
         <div class="row mb-3">
           <div class="col-sm-12 col-lg-12 col-md-12">
-            <h6>TREX 2021 Workshop</h6>
+            <h6>TREX 2022 Workshop</h6>
           </div>
           <div class="col-sm-12 pr-0 col-lg-12 col-md-12">
-            <h6 class="theme-color">October 24, 8-11:30 am Central Time
+            <h6 class="theme-color">Oct 16 or 17, 2022
               <!-- <br>12:00 pm - 3:30 pm (US Mountain Time) -->
             </h6>
           </div>
@@ -118,21 +120,15 @@
       <b class="theme-color">NEW!</b> We are pleased to announce <i>Steven Franconeri</i>, <i>Jenn Wortman Vaughan</i>, and <i>Bum Chul Kwon</i> will join TREX as invited speakers. More information about the talks and speakers are <a class="theme-color" href="speakers.html">available here!</a>
     </div>  -->
           <div class="col-md-6 col-lg-8">
-            <div class="alert p-2" style="background-color:#eaeaea;">
-              <b class="theme-color">NEW!</b>
-              <!-- IEEE VIS conference is going virtual! -->
-              We are pleased to announce <b>Q. Vera Liao</b> will be this year's Keynote Speaker at TREX! More information about Dr. Liao's talk and her work is <a href="speakers.html"><u>available here!</u></a>
+            <div class="alert p-2" style="background-color:#eaf0ff;">
+              <!-- <b class="theme-color">NEW!</b> -->
+              TREX will follow and comply with IEEE VIS conference format. Currently, VIS 2022 is to set as a hybrid
+              conference, with planned attendance from Oklahoma City, USA. Please refer to the <a
+                href="http://ieeevis.org">IEEE VIS Website</a> to monitor the conference official updates.
             </div>
-            <div class="alert p-2" style="background-color:#eaeaea;">
-              <b class="theme-color">NEW!</b>
-              <!-- IEEE VIS conference is going virtual! -->
-              TREX will be held virtually on Sunday, October 24 2021, from 8 am to 11:30 am Central Time. Please refer to the <a
-                href="http://ieeevis.org">IEEE VIS Website</a> for more information on registration and how to attend. The workshop schedule is now <a href="papers.html"><u>available here!</u></a>
-            </div>
-            <h5 class="theme-color">Welcome to TREX 2021!</h5>
-            <p>This is a second-time workshop that is happening in conjunction with the <a
-                href="http://ieeevis.org">IEEE Visualization Conference</a>, scheduled to take place in New Orleans,
-              Louisiana, USA in October 2021.
+            <h5 class="theme-color">Welcome to TREX 2022!</h5>
+            <p>This is a third-time workshop that is happening in conjunction with the <a href="http://ieeevis.org">IEEE
+                Visualization Conference</a>, scheduled to take place in Oklahoma City, USA in October 2022.
               We will share all the relevant news and updates about the workshop on this website.
               <br>
               <br>
@@ -142,9 +138,10 @@
               The goal is to discuss and discover challenges and future directions regarding these issues by proposing
               design guidelines, empirical findings, and visual analytic techniques.
               <br>
-            <h6 class="theme-color"><b>Previous workshop:</b>
-              <a href="https://trexvis.github.io/Workshop2020/index.html" target="_blank"><span
-                  style="color=#770e81"><i>TREX 2020</i></span></a>
+            <h6 class="theme-color"><b>Previous workshops:</b>
+              <a href="https://trexvis.github.io/Workshop2021/index.html" target="_blank"><i>TREX 2021</i></a>,
+              <a href="https://trexvis.github.io/Workshop2020/index.html" target="_blank"
+                style="color:#5f76ae!important"><i>TREX 2020</i></a>
             </h6>
             </p>
           </div>
@@ -177,12 +174,13 @@
     <div class="row text-center mb-1">
       <div class="col-sm-12">
         <i class="text-center" style="color: #5e5d5d; font-size: 0.7rem;"> Copyright <i class="far fa-copyright"></i>
-          <script>document.write(new Date().getUTCFullYear());</script> TREX Second Workshop on Trust and Expertise In
-          Visual Analytics.
+          <script>document.write(new Date().getUTCFullYear());</script> TREX 2022: Third Workshop on Trust and Expertise
+          In
+          Visualization. All Rights Reserved.
         </i>
-        <i style="color: #5e5d5d; font-size: 0.7rem;"> The image on the header was made from vectors published by <a
+        <!-- <i style="color: #5e5d5d; font-size: 0.7rem;"> The image on the header was made from vectors published by <a
             href="https://www.freepik.com/free-photos-vectors/background">freepik.com</a>. Copyright belongs to freepik
-          and art creators. </i>
+          and art creators. </i> -->
       </div>
     </div>
 
